Prevent self-align overlapping between grid and columns
When col is also a grid, col self alignment (-top, -bottom, -middle, -first, -last) overlapped with global grid alignment.

--- a/src/gridlex.scss
+++ b/src/gridlex.scss
@@ -128,19 +128,19 @@
 
 // FOR COL
 [#{$gl-attributeName}*="#{$gl-colName}-"]{
-  &[#{$gl-attributeName}*="-top"]{
+  &[#{$gl-attributeName}*="-selfTop"]{
     align-self: flex-start;
   }
-  &[#{$gl-attributeName}*="-middle"]{
+  &[#{$gl-attributeName}*="-selfMiddle"]{
     align-self: center;
   }
-  &[#{$gl-attributeName}*="-bottom"]{
+  &[#{$gl-attributeName}*="-selfBottom"]{
     align-self: flex-end;
   }
-  &[#{$gl-attributeName}*="-first"]{
+  &[#{$gl-attributeName}*="-selfFirst"]{
     order: -1;
   }
-  &[#{$gl-attributeName}*="-last"]{
+  &[#{$gl-attributeName}*="-selfLast"]{
     order: 1;
   }
 }
